file: move sh to scripts

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,8 @@
 *
-*/
 */*
 
 !README.md
 !LICENSE
-!init.sh
 !.gitignore
-!Makefile
-!create_display_panes.sh
-!check_tmux.sh
-!rmm_build.sh
+!scripts/
+!scripts/*
